# breakout

./: CMakeLists.txt  README.md
include/: ball.h  brick.h  graphics.h  paddle.h  particle.h  utils.h
src/: ball.cpp  brick.cpp  main.cpp  paddle.cpp  particle.cpp
